We have to plan a refresh of an item if it uses UDS_LOCAL_PATH. Thanks to dfaure for the patch. (forward port)

BUG:110932


svn path=/trunk/KDE/kdelibs/; revision=464311